# serializer version: 1
# name: test_navigation_authenticated[AuthorizedPrescriber]
  '''
  <nav aria-label="Navigation principale" id="nav-primary" role="navigation">
                          <ul>
                              <li class="d-none d-xl-inline-block dropdown">
                                  <button aria-controls="helpDropdown" aria-expanded="false" aria-haspopup="true" class="btn btn-link dropdown-toggle mh-auto p-0" data-bs-toggle="dropdown" type="button">
                                      Besoin d'aide ?
                                  </button>
                                  <div class="dropdown-menu" id="helpDropdown">
                                      <ul class="list-unstyled">
                                          <li>
                                              <a aria-label="Accéder à l'espace de documentation (nouvel onglet)" class="dropdown-item has-external-link" data-matomo-action="clic" data-matomo-category="help" data-matomo-event="true" data-matomo-option="header_documentation" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr" rel="noopener" target="_blank">Documentation</a>
                                          </li>
                                          <li>
                                              <a aria-label="Qui peut bénéficier des contrats d'IAE ? (ouverture dans un nouvel onglet)" class="dropdown-item has-external-link" data-matomo-action="clic" data-matomo-category="help" data-matomo-event="true" data-matomo-option="header_comprendre-liae" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr/articles/14733403281937--Comprendre-l-IAE" rel="noopener" target="_blank">Qui peut bénéficier des contrats d'IAE ?</a>
                                          </li>
                                          
                                              
                                                  <li>
                                                      <a aria-label="Prescrire un parcours IAE (guide pratique) (ouverture dans un nouvel onglet)" class="dropdown-item has-external-link" data-matomo-action="clic" data-matomo-category="help" data-matomo-event="true" data-matomo-option="header_prescrire-parcours-iae-guide" href="https://travail-emploi.gouv.fr/actualites/l-actualite-du-ministere/article/guide-pratique-la-prescription-de-parcours-d-insertion-par-l-activite" rel="noopener" target="_blank">Prescrire un parcours IAE (guide pratique)</a>
                                                  </li>
                                              
                                          
                                          <li>
                                              <a aria-label="Les nouveautés du site des emplois de l'inclusion (ouverture dans un nouvel onglet)" class="dropdown-item has-external-link" data-matomo-action="clic" data-matomo-category="help" data-matomo-event="true" data-matomo-option="header_nouveautes" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr/categories/25225629682321--Nouveaut%C3%A9s" rel="noopener" target="_blank">Nouveautés</a>
                                          </li>
                                      </ul>
                                  </div>
                              </li>
                              <li>
                                  <a class="btn btn-ico btn-outline-primary" href="/signup/">
                                      <i aria-hidden="true" class="ri-user-add-line"></i>
                                      <span>S'inscrire</span>
                                  </a>
                              </li>
                              <li class="dropdown">
                                  <button aria-controls="loginUserDropdown" aria-expanded="false" aria-haspopup="true" class="btn btn-ico btn-primary" data-bs-toggle="dropdown">
                                      <i aria-hidden="true" class="ri-login-box-line"></i>
                                      <span>Se connecter</span>
                                  </button>
                                  <div class="dropdown-menu" id="loginUserDropdown">
                                      <ul class="list-unstyled">
                                          <li>
                                              <a class="dropdown-item" href="/login/job_seeker">
                                                  Candidat
                                              </a>
                                          </li>
                                          <li>
                                              <a class="dropdown-item" href="/login/prescriber">
                                                  Prescripteur
                                              </a>
                                          </li>
                                          <li>
                                              <a class="dropdown-item" href="/login/employer">
                                                  Employeur inclusif
                                              </a>
                                          </li>
                                          <li>
                                              <a class="dropdown-item" href="/login/labor_inspector">
                                                  Institution partenaire
                                              </a>
                                          </li>
                                      </ul>
                                  </div>
                              </li>
                          </ul>
                      </nav>
  '''
# ---
# name: test_navigation_authenticated[Employer]
  '''
  <nav aria-label="Navigation principale" id="nav-primary" role="navigation">
                          <ul>
                              <li class="d-none d-xl-inline-block dropdown">
                                  <button aria-controls="helpDropdown" aria-expanded="false" aria-haspopup="true" class="btn btn-link dropdown-toggle mh-auto p-0" data-bs-toggle="dropdown" type="button">
                                      Besoin d'aide ?
                                  </button>
                                  <div class="dropdown-menu" id="helpDropdown">
                                      <ul class="list-unstyled">
                                          <li>
                                              <a aria-label="Accéder à l'espace de documentation (nouvel onglet)" class="dropdown-item has-external-link" data-matomo-action="clic" data-matomo-category="help" data-matomo-event="true" data-matomo-option="header_documentation" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr" rel="noopener" target="_blank">Documentation</a>
                                          </li>
                                          <li>
                                              <a aria-label="Qui peut bénéficier des contrats d'IAE ? (ouverture dans un nouvel onglet)" class="dropdown-item has-external-link" data-matomo-action="clic" data-matomo-category="help" data-matomo-event="true" data-matomo-option="header_comprendre-liae" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr/articles/14733403281937--Comprendre-l-IAE" rel="noopener" target="_blank">Qui peut bénéficier des contrats d'IAE ?</a>
                                          </li>
                                          
                                              
                                                  <li>
                                                      <a aria-label="Prescrire un parcours IAE (guide pratique) (ouverture dans un nouvel onglet)" class="dropdown-item has-external-link" data-matomo-action="clic" data-matomo-category="help" data-matomo-event="true" data-matomo-option="header_prescrire-parcours-iae-guide" href="https://travail-emploi.gouv.fr/actualites/l-actualite-du-ministere/article/guide-pratique-la-prescription-de-parcours-d-insertion-par-l-activite" rel="noopener" target="_blank">Prescrire un parcours IAE (guide pratique)</a>
                                                  </li>
                                              
                                          
                                          <li>
                                              <a aria-label="Les nouveautés du site des emplois de l'inclusion (ouverture dans un nouvel onglet)" class="dropdown-item has-external-link" data-matomo-action="clic" data-matomo-category="help" data-matomo-event="true" data-matomo-option="header_nouveautes" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr/categories/25225629682321--Nouveaut%C3%A9s" rel="noopener" target="_blank">Nouveautés</a>
                                          </li>
                                      </ul>
                                  </div>
                              </li>
                              <li>
                                  <a class="btn btn-ico btn-outline-primary" href="/signup/">
                                      <i aria-hidden="true" class="ri-user-add-line"></i>
                                      <span>S'inscrire</span>
                                  </a>
                              </li>
                              <li class="dropdown">
                                  <button aria-controls="loginUserDropdown" aria-expanded="false" aria-haspopup="true" class="btn btn-ico btn-primary" data-bs-toggle="dropdown">
                                      <i aria-hidden="true" class="ri-login-box-line"></i>
                                      <span>Se connecter</span>
                                  </button>
                                  <div class="dropdown-menu" id="loginUserDropdown">
                                      <ul class="list-unstyled">
                                          <li>
                                              <a class="dropdown-item" href="/login/job_seeker">
                                                  Candidat
                                              </a>
                                          </li>
                                          <li>
                                              <a class="dropdown-item" href="/login/prescriber">
                                                  Prescripteur
                                              </a>
                                          </li>
                                          <li>
                                              <a class="dropdown-item" href="/login/employer">
                                                  Employeur inclusif
                                              </a>
                                          </li>
                                          <li>
                                              <a class="dropdown-item" href="/login/labor_inspector">
                                                  Institution partenaire
                                              </a>
                                          </li>
                                      </ul>
                                  </div>
                              </li>
                          </ul>
                      </nav>
  '''
# ---
# name: test_navigation_authenticated[JobSeeker]
  '''
  <nav aria-label="Navigation principale" id="nav-primary" role="navigation">
                          <ul>
                              <li class="d-none d-xl-inline-block dropdown">
                                  <button aria-controls="helpDropdown" aria-expanded="false" aria-haspopup="true" class="btn btn-link dropdown-toggle mh-auto p-0" data-bs-toggle="dropdown" type="button">
                                      Besoin d'aide ?
                                  </button>
                                  <div class="dropdown-menu" id="helpDropdown">
                                      <ul class="list-unstyled">
                                          <li>
                                              <a aria-label="Accéder à l'espace de documentation (nouvel onglet)" class="dropdown-item has-external-link" data-matomo-action="clic" data-matomo-category="help" data-matomo-event="true" data-matomo-option="header_documentation" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr" rel="noopener" target="_blank">Documentation</a>
                                          </li>
                                          <li>
                                              <a aria-label="Qui peut bénéficier des contrats d'IAE ? (ouverture dans un nouvel onglet)" class="dropdown-item has-external-link" data-matomo-action="clic" data-matomo-category="help" data-matomo-event="true" data-matomo-option="header_comprendre-liae" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr/articles/14733403281937--Comprendre-l-IAE" rel="noopener" target="_blank">Qui peut bénéficier des contrats d'IAE ?</a>
                                          </li>
                                          
                                              
                                          
                                          <li>
                                              <a aria-label="Les nouveautés du site des emplois de l'inclusion (ouverture dans un nouvel onglet)" class="dropdown-item has-external-link" data-matomo-action="clic" data-matomo-category="help" data-matomo-event="true" data-matomo-option="header_nouveautes" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr/categories/25225629682321--Nouveaut%C3%A9s" rel="noopener" target="_blank">Nouveautés</a>
                                          </li>
                                      </ul>
                                  </div>
                              </li>
                              <li>
                                  <a class="btn btn-ico btn-outline-primary" href="/signup/">
                                      <i aria-hidden="true" class="ri-user-add-line"></i>
                                      <span>S'inscrire</span>
                                  </a>
                              </li>
                              <li class="dropdown">
                                  <button aria-controls="loginUserDropdown" aria-expanded="false" aria-haspopup="true" class="btn btn-ico btn-primary" data-bs-toggle="dropdown">
                                      <i aria-hidden="true" class="ri-login-box-line"></i>
                                      <span>Se connecter</span>
                                  </button>
                                  <div class="dropdown-menu" id="loginUserDropdown">
                                      <ul class="list-unstyled">
                                          <li>
                                              <a class="dropdown-item" href="/login/job_seeker">
                                                  Candidat
                                              </a>
                                          </li>
                                          <li>
                                              <a class="dropdown-item" href="/login/prescriber">
                                                  Prescripteur
                                              </a>
                                          </li>
                                          <li>
                                              <a class="dropdown-item" href="/login/employer">
                                                  Employeur inclusif
                                              </a>
                                          </li>
                                          <li>
                                              <a class="dropdown-item" href="/login/labor_inspector">
                                                  Institution partenaire
                                              </a>
                                          </li>
                                      </ul>
                                  </div>
                              </li>
                          </ul>
                      </nav>
  '''
# ---
# name: test_navigation_authenticated[LaborInspector]
  '''
  <nav aria-label="Navigation principale" id="nav-primary" role="navigation">
                          <ul>
                              <li class="d-none d-xl-inline-block dropdown">
                                  <button aria-controls="helpDropdown" aria-expanded="false" aria-haspopup="true" class="btn btn-link dropdown-toggle mh-auto p-0" data-bs-toggle="dropdown" type="button">
                                      Besoin d'aide ?
                                  </button>
                                  <div class="dropdown-menu" id="helpDropdown">
                                      <ul class="list-unstyled">
                                          <li>
                                              <a aria-label="Accéder à l'espace de documentation (nouvel onglet)" class="dropdown-item has-external-link" data-matomo-action="clic" data-matomo-category="help" data-matomo-event="true" data-matomo-option="header_documentation" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr" rel="noopener" target="_blank">Documentation</a>
                                          </li>
                                          <li>
                                              <a aria-label="Qui peut bénéficier des contrats d'IAE ? (ouverture dans un nouvel onglet)" class="dropdown-item has-external-link" data-matomo-action="clic" data-matomo-category="help" data-matomo-event="true" data-matomo-option="header_comprendre-liae" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr/articles/14733403281937--Comprendre-l-IAE" rel="noopener" target="_blank">Qui peut bénéficier des contrats d'IAE ?</a>
                                          </li>
                                          
                                              
                                          
                                          <li>
                                              <a aria-label="Les nouveautés du site des emplois de l'inclusion (ouverture dans un nouvel onglet)" class="dropdown-item has-external-link" data-matomo-action="clic" data-matomo-category="help" data-matomo-event="true" data-matomo-option="header_nouveautes" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr/categories/25225629682321--Nouveaut%C3%A9s" rel="noopener" target="_blank">Nouveautés</a>
                                          </li>
                                      </ul>
                                  </div>
                              </li>
                              <li>
                                  <a class="btn btn-ico btn-outline-primary" href="/signup/">
                                      <i aria-hidden="true" class="ri-user-add-line"></i>
                                      <span>S'inscrire</span>
                                  </a>
                              </li>
                              <li class="dropdown">
                                  <button aria-controls="loginUserDropdown" aria-expanded="false" aria-haspopup="true" class="btn btn-ico btn-primary" data-bs-toggle="dropdown">
                                      <i aria-hidden="true" class="ri-login-box-line"></i>
                                      <span>Se connecter</span>
                                  </button>
                                  <div class="dropdown-menu" id="loginUserDropdown">
                                      <ul class="list-unstyled">
                                          <li>
                                              <a class="dropdown-item" href="/login/job_seeker">
                                                  Candidat
                                              </a>
                                          </li>
                                          <li>
                                              <a class="dropdown-item" href="/login/prescriber">
                                                  Prescripteur
                                              </a>
                                          </li>
                                          <li>
                                              <a class="dropdown-item" href="/login/employer">
                                                  Employeur inclusif
                                              </a>
                                          </li>
                                          <li>
                                              <a class="dropdown-item" href="/login/labor_inspector">
                                                  Institution partenaire
                                              </a>
                                          </li>
                                      </ul>
                                  </div>
                              </li>
                          </ul>
                      </nav>
  '''
# ---
# name: test_navigation_authenticated[PrescriberWithOrganization]
  '''
  <nav aria-label="Navigation principale" id="nav-primary" role="navigation">
                          <ul>
                              <li class="d-none d-xl-inline-block dropdown">
                                  <button aria-controls="helpDropdown" aria-expanded="false" aria-haspopup="true" class="btn btn-link dropdown-toggle mh-auto p-0" data-bs-toggle="dropdown" type="button">
                                      Besoin d'aide ?
                                  </button>
                                  <div class="dropdown-menu" id="helpDropdown">
                                      <ul class="list-unstyled">
                                          <li>
                                              <a aria-label="Accéder à l'espace de documentation (nouvel onglet)" class="dropdown-item has-external-link" data-matomo-action="clic" data-matomo-category="help" data-matomo-event="true" data-matomo-option="header_documentation" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr" rel="noopener" target="_blank">Documentation</a>
                                          </li>
                                          <li>
                                              <a aria-label="Qui peut bénéficier des contrats d'IAE ? (ouverture dans un nouvel onglet)" class="dropdown-item has-external-link" data-matomo-action="clic" data-matomo-category="help" data-matomo-event="true" data-matomo-option="header_comprendre-liae" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr/articles/14733403281937--Comprendre-l-IAE" rel="noopener" target="_blank">Qui peut bénéficier des contrats d'IAE ?</a>
                                          </li>
                                          
                                              
                                          
                                          <li>
                                              <a aria-label="Les nouveautés du site des emplois de l'inclusion (ouverture dans un nouvel onglet)" class="dropdown-item has-external-link" data-matomo-action="clic" data-matomo-category="help" data-matomo-event="true" data-matomo-option="header_nouveautes" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr/categories/25225629682321--Nouveaut%C3%A9s" rel="noopener" target="_blank">Nouveautés</a>
                                          </li>
                                      </ul>
                                  </div>
                              </li>
                              <li>
                                  <a class="btn btn-ico btn-outline-primary" href="/signup/">
                                      <i aria-hidden="true" class="ri-user-add-line"></i>
                                      <span>S'inscrire</span>
                                  </a>
                              </li>
                              <li class="dropdown">
                                  <button aria-controls="loginUserDropdown" aria-expanded="false" aria-haspopup="true" class="btn btn-ico btn-primary" data-bs-toggle="dropdown">
                                      <i aria-hidden="true" class="ri-login-box-line"></i>
                                      <span>Se connecter</span>
                                  </button>
                                  <div class="dropdown-menu" id="loginUserDropdown">
                                      <ul class="list-unstyled">
                                          <li>
                                              <a class="dropdown-item" href="/login/job_seeker">
                                                  Candidat
                                              </a>
                                          </li>
                                          <li>
                                              <a class="dropdown-item" href="/login/prescriber">
                                                  Prescripteur
                                              </a>
                                          </li>
                                          <li>
                                              <a class="dropdown-item" href="/login/employer">
                                                  Employeur inclusif
                                              </a>
                                          </li>
                                          <li>
                                              <a class="dropdown-item" href="/login/labor_inspector">
                                                  Institution partenaire
                                              </a>
                                          </li>
                                      </ul>
                                  </div>
                              </li>
                          </ul>
                      </nav>
  '''
# ---
# name: test_navigation_authenticated[PrescriberWithoutOrganization]
  '''
  <nav aria-label="Navigation principale" id="nav-primary" role="navigation">
                          <ul>
                              <li class="d-none d-xl-inline-block dropdown">
                                  <button aria-controls="helpDropdown" aria-expanded="false" aria-haspopup="true" class="btn btn-link dropdown-toggle mh-auto p-0" data-bs-toggle="dropdown" type="button">
                                      Besoin d'aide ?
                                  </button>
                                  <div class="dropdown-menu" id="helpDropdown">
                                      <ul class="list-unstyled">
                                          <li>
                                              <a aria-label="Accéder à l'espace de documentation (nouvel onglet)" class="dropdown-item has-external-link" data-matomo-action="clic" data-matomo-category="help" data-matomo-event="true" data-matomo-option="header_documentation" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr" rel="noopener" target="_blank">Documentation</a>
                                          </li>
                                          <li>
                                              <a aria-label="Qui peut bénéficier des contrats d'IAE ? (ouverture dans un nouvel onglet)" class="dropdown-item has-external-link" data-matomo-action="clic" data-matomo-category="help" data-matomo-event="true" data-matomo-option="header_comprendre-liae" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr/articles/14733403281937--Comprendre-l-IAE" rel="noopener" target="_blank">Qui peut bénéficier des contrats d'IAE ?</a>
                                          </li>
                                          
                                              
                                          
                                          <li>
                                              <a aria-label="Les nouveautés du site des emplois de l'inclusion (ouverture dans un nouvel onglet)" class="dropdown-item has-external-link" data-matomo-action="clic" data-matomo-category="help" data-matomo-event="true" data-matomo-option="header_nouveautes" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr/categories/25225629682321--Nouveaut%C3%A9s" rel="noopener" target="_blank">Nouveautés</a>
                                          </li>
                                      </ul>
                                  </div>
                              </li>
                              <li>
                                  <a class="btn btn-ico btn-outline-primary" href="/signup/">
                                      <i aria-hidden="true" class="ri-user-add-line"></i>
                                      <span>S'inscrire</span>
                                  </a>
                              </li>
                              <li class="dropdown">
                                  <button aria-controls="loginUserDropdown" aria-expanded="false" aria-haspopup="true" class="btn btn-ico btn-primary" data-bs-toggle="dropdown">
                                      <i aria-hidden="true" class="ri-login-box-line"></i>
                                      <span>Se connecter</span>
                                  </button>
                                  <div class="dropdown-menu" id="loginUserDropdown">
                                      <ul class="list-unstyled">
                                          <li>
                                              <a class="dropdown-item" href="/login/job_seeker">
                                                  Candidat
                                              </a>
                                          </li>
                                          <li>
                                              <a class="dropdown-item" href="/login/prescriber">
                                                  Prescripteur
                                              </a>
                                          </li>
                                          <li>
                                              <a class="dropdown-item" href="/login/employer">
                                                  Employeur inclusif
                                              </a>
                                          </li>
                                          <li>
                                              <a class="dropdown-item" href="/login/labor_inspector">
                                                  Institution partenaire
                                              </a>
                                          </li>
                                      </ul>
                                  </div>
                              </li>
                          </ul>
                      </nav>
  '''
# ---
# name: test_navigation_not_authenticated
  '''
  <nav aria-label="Navigation principale" id="nav-primary" role="navigation">
                          <ul>
                              <li class="d-none d-xl-inline-block dropdown">
                                  <button aria-controls="helpDropdown" aria-expanded="false" aria-haspopup="true" class="btn btn-link dropdown-toggle mh-auto p-0" data-bs-toggle="dropdown" type="button">
                                      Besoin d'aide ?
                                  </button>
                                  <div class="dropdown-menu" id="helpDropdown">
                                      <ul class="list-unstyled">
                                          <li>
                                              <a aria-label="Accéder à l'espace de documentation (nouvel onglet)" class="dropdown-item has-external-link" data-matomo-action="clic" data-matomo-category="help" data-matomo-event="true" data-matomo-option="header_documentation" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr" rel="noopener" target="_blank">Documentation</a>
                                          </li>
                                          <li>
                                              <a aria-label="Qui peut bénéficier des contrats d'IAE ? (ouverture dans un nouvel onglet)" class="dropdown-item has-external-link" data-matomo-action="clic" data-matomo-category="help" data-matomo-event="true" data-matomo-option="header_comprendre-liae" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr/articles/14733403281937--Comprendre-l-IAE" rel="noopener" target="_blank">Qui peut bénéficier des contrats d'IAE ?</a>
                                          </li>
                                          
                                          <li>
                                              <a aria-label="Les nouveautés du site des emplois de l'inclusion (ouverture dans un nouvel onglet)" class="dropdown-item has-external-link" data-matomo-action="clic" data-matomo-category="help" data-matomo-event="true" data-matomo-option="header_nouveautes" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr/categories/25225629682321--Nouveaut%C3%A9s" rel="noopener" target="_blank">Nouveautés</a>
                                          </li>
                                      </ul>
                                  </div>
                              </li>
                              <li>
                                  <a class="btn btn-ico btn-outline-primary" href="/signup/">
                                      <i aria-hidden="true" class="ri-user-add-line"></i>
                                      <span>S'inscrire</span>
                                  </a>
                              </li>
                              <li class="dropdown">
                                  <button aria-controls="loginUserDropdown" aria-expanded="false" aria-haspopup="true" class="btn btn-ico btn-primary" data-bs-toggle="dropdown">
                                      <i aria-hidden="true" class="ri-login-box-line"></i>
                                      <span>Se connecter</span>
                                  </button>
                                  <div class="dropdown-menu" id="loginUserDropdown">
                                      <ul class="list-unstyled">
                                          <li>
                                              <a class="dropdown-item" href="/login/job_seeker">
                                                  Candidat
                                              </a>
                                          </li>
                                          <li>
                                              <a class="dropdown-item" href="/login/prescriber">
                                                  Prescripteur
                                              </a>
                                          </li>
                                          <li>
                                              <a class="dropdown-item" href="/login/employer">
                                                  Employeur inclusif
                                              </a>
                                          </li>
                                          <li>
                                              <a class="dropdown-item" href="/login/labor_inspector">
                                                  Institution partenaire
                                              </a>
                                          </li>
                                      </ul>
                                  </div>
                              </li>
                          </ul>
                      </nav>
  '''
# ---
